# fastapi-ai-assistant

./: .gitignore  main.py  pyproject.toml
agent/: chat_agent.py  tools.py
api/: chat_api.py
core/: config.py
models/: message.py  schemas.py
service/: chat_service.py
